Agrege un titulo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+<div class="titulo">
+    <h1>Pagina de inicio</h1>
+</div>
  <div class="contenedor">
   <div class="padre"><p>Hola Mundo</p></div>  
   </div>
+
 </body>
 </html>
