--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="titulo">
-    <h1>Pagina de inicio</h1>
+    <h1>Pagina de inicio 001</h1>
 </div>
  <div class="contenedor">
   <div class="padre"><p>Hola Mundo</p></div>  
